checks: disable unit tests that are flaky or don't work with core git
camerabin test seems to time out with core git, so disabling because
chances are the problem is in the test and the core git stuff will
be released before we can fix the code in the test.
neonhttpsrc unit test is a bit flaky, it tends to fail the first
time when called (the host/url it checks for seems to be down as
well/anyway).

--- a/gst-plugins-bad/tests/check/Makefile.am
+++ b/gst-plugins-bad/tests/check/Makefile.am
@@ -78,18 +78,25 @@ VALGRIND_TO_FIX = \
 VALGRIND_TESTS_DISABLE = \
 	$(VALGRIND_TO_FIX)
 
+# these tests don't even pass
+# camerabin: temporarily disabled because it fails with current core -git
+# (which will be release before the next -bad release though, and chances are
+# changes to fix this are needed in the camerabin test)
+# neon: too flaky (almost always fails 'the first time')
+noinst_PROGRAMS = \
+	$(check_neon)      \
+	elements/camerabin
+
 check_PROGRAMS = \
 	generic/states \
 	$(check_mpeg2enc)  \
 	$(check_mplex)     \
-	$(check_neon)      \
 	$(check_ofa)        \
 	$(check_timidity)  \
 	$(check_kate)  \
 	elements/aacparse \
 	elements/amrparse \
 	elements/asfmux \
-	elements/camerabin \
 	elements/legacyresample \
 	elements/qtmux \
 	elements/rtpbin \
