--- a/gst-plugins-good/docs/plugins/Makefile.am
+++ b/gst-plugins-good/docs/plugins/Makefile.am
@@ -194,6 +194,7 @@ EXTRA_HFILES = \
 	$(top_srcdir)/gst/udp/gstmultiudpsink.h \
 	$(top_srcdir)/gst/udp/gstudpsrc.h \
 	$(top_srcdir)/gst/udp/gstudpsink.h \
+	$(top_srcdir)/gst/videobox/gstvideobox.h \
 	$(top_srcdir)/gst/videocrop/gstvideocrop.h \
 	$(top_srcdir)/gst/videocrop/gstaspectratiocrop.h \
 	$(top_srcdir)/gst/videofilter/gstgamma.h \
