--- a/gst-plugins-bad/ext/resindvd/Makefile.am
+++ b/gst-plugins-bad/ext/resindvd/Makefile.am
@@ -19,7 +19,7 @@ libresindvd_la_SOURCES = \
 
 libresindvd_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) \
 $(GST_CFLAGS) $(DVDNAV_CFLAGS)
-libresindvd_la_LIBADD = $(GST_PLUGINS_BASE_CFLAGS) \
+libresindvd_la_LIBADD = $(GST_PLUGINS_BASE_LIBS) \
 -lgstinterfaces-$(GST_MAJORMINOR) -lgstvideo-$(GST_MAJORMINOR) \
 $(GST_BASE_LIBS) $(GST_LIBS) $(DVDNAV_LIBS)
 libresindvd_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
