--- a/gst-plugins-bad/configure.ac
+++ b/gst-plugins-bad/configure.ac
@@ -492,7 +492,7 @@ AG_GST_CHECK_FEATURE(ASSRENDER, [ASS/SSA renderer], assrender, [
 AC_SUBST(ASSRENDER_CFLAGS)
 AC_SUBST(ASSRENDER_LIBS)
 
-dnl *** amrwb-enc ***
+dnl *** amrwb ***
 translit(dnm, m, l) AM_CONDITIONAL(USE_AMRWB, true)
 AG_GST_CHECK_FEATURE(AMRWB, [amrwb library], amrwbenc, [
   AG_GST_CHECK_LIBHEADER(AMRWB, amrwb,
@@ -1056,7 +1056,7 @@ AG_GST_CHECK_FEATURE(MODPLUG, modplug, modplug, [
   AC_SUBST(MODPLUG_LIBS)
 ])
 
-dnl check for libmimic
+dnl *** mimic ***
 translit(dnm, m, l) AM_CONDITIONAL(USE_MIMIC, true)
 AG_GST_CHECK_FEATURE(MIMIC, [libmimic library], mimic, [
   MIMDEC_REQUIRED=1.0
@@ -1579,8 +1579,6 @@ else
 dnl not building plugins with external dependencies,
 dnl but we still need to set the conditionals
 
-AM_CONDITIONAL(USE_QUICKTIME, false)
-AM_CONDITIONAL(USE_VCD, false)
 AM_CONDITIONAL(USE_ALSA, false)
 AM_CONDITIONAL(USE_ASSRENDER, false)
 AM_CONDITIONAL(USE_AMRWB, false)
@@ -1590,13 +1588,11 @@ AM_CONDITIONAL(USE_CDAUDIO, false)
 AM_CONDITIONAL(USE_CELT, false)
 AM_CONDITIONAL(USE_DC1394, false)
 AM_CONDITIONAL(USE_DIRECTFB, false)
-AM_CONDITIONAL(USE_DIRECTDRAW, false)
-AM_CONDITIONAL(USE_DIRECTSOUND, false)
-AM_CONDITIONAL(USE_DTS, false)
 AM_CONDITIONAL(USE_DIRAC, false)
+AM_CONDITIONAL(USE_DTS, false)
 AM_CONDITIONAL(USE_DIVX, false)
-AM_CONDITIONAL(USE_DVB, false)
 AM_CONDITIONAL(USE_DVDNAV, false)
+AM_CONDITIONAL(USE_METADATA, false)
 AM_CONDITIONAL(USE_FAAC, false)
 AM_CONDITIONAL(USE_FAAD, false)
 AM_CONDITIONAL(USE_FBDEV, false)
@@ -1604,13 +1600,14 @@ AM_CONDITIONAL(USE_GSM, false)
 AM_CONDITIONAL(USE_IVORBIS, false)
 AM_CONDITIONAL(USE_JACK, false)
 AM_CONDITIONAL(USE_JP2K, false)
+AM_CONDITIONAL(USE_KATE, false)
+AM_CONDITIONAL(USE_TIGER, false)
 AM_CONDITIONAL(USE_LADSPA, false)
 AM_CONDITIONAL(USE_LV2, false)
 AM_CONDITIONAL(USE_LIBMMS, false)
 AM_CONDITIONAL(USE_MODPLUG, false)
-AM_CONDITIONAL(USE_METADATA, false)
-AM_CONDITIONAL(USE_MPEG2ENC, false)
 AM_CONDITIONAL(USE_MIMIC, false)
+AM_CONDITIONAL(USE_MPEG2ENC, false)
 AM_CONDITIONAL(USE_MPLEX, false)
 AM_CONDITIONAL(USE_MUSEPACK, false)
 AM_CONDITIONAL(USE_MUSICBRAINZ, false)
@@ -1618,20 +1615,19 @@ AM_CONDITIONAL(USE_MYTHTV, false)
 AM_CONDITIONAL(USE_NAS, false)
 AM_CONDITIONAL(USE_NEON, false)
 AM_CONDITIONAL(USE_OFA, false)
-AM_CONDITIONAL(USE_OSS4, false)
 AM_CONDITIONAL(USE_RSVG, false)
+AM_CONDITIONAL(USE_TIMIDITY, false)
+AM_CONDITIONAL(USE_WILDMIDI, false)
 AM_CONDITIONAL(USE_SDL, false)
 AM_CONDITIONAL(USE_SNDFILE, false)
 AM_CONDITIONAL(USE_SOUNDTOUCH, false)
-AM_CONDITIONAL(USE_GME, false)
 AM_CONDITIONAL(USE_SPC, false)
+AM_CONDITIONAL(USE_GME, false)
 AM_CONDITIONAL(USE_SWFDEC, false)
 AM_CONDITIONAL(USE_THEORADEC, false)
-AM_CONDITIONAL(USE_TIMIDITY, false)
 AM_CONDITIONAL(USE_XVID, false)
-AM_CONDITIONAL(USE_WILDMIDI, false)
-AM_CONDITIONAL(USE_KATE, false)
-AM_CONDITIONAL(USE_TIGER, false)
+AM_CONDITIONAL(USE_DVB, false)
+AM_CONDITIONAL(USE_OSS4, false)
 AM_CONDITIONAL(USE_WININET, false)
 AM_CONDITIONAL(USE_ACM, false)
 AM_CONDITIONAL(USE_VDPAU, false)
