bytereader: add inlined _unchecked() variants for some functions
API: gst_byte_reader_skip_unchecked()
API: gst_byte_reader_peek_*_unchecked()
API: gst_byte_reader_get_*_unchecked()
API: gst_byte_reader_{peek,get,dup}_data_unchecked()

--- a/gstreamer/libs/gst/base/Makefile.am
+++ b/gstreamer/libs/gst/base/Makefile.am
@@ -33,6 +33,9 @@ libgstbase_@GST_MAJORMINOR@include_HEADERS =	\
 	gsttypefindhelper.h	\
 	gstdataqueue.h
 
+noinst_HEADERS = \
+	gstbytereader-docs.h
+
 CLEANFILES = *.gcno *.gcda *.gcov
 
 %.c.gcov: .libs/libgstbase_@GST_MAJORMINOR@_la-%.gcda %.c
