--- a/gst-plugins-base/gst-libs/gst/interfaces/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/interfaces/Makefile.am
@@ -73,6 +73,7 @@ BUILT_GIRSOURCES = GstInterfaces-@GST_MAJORMINOR@.gir
 gir_headers=$(patsubst %,$(srcdir)/%, $(libgstinterfacesinclude_HEADERS))
 gir_headers+=$(patsubst %,$(srcdir)/%, $(nodist_libgstinterfacesinclude_HEADERS))
 gir_sources=$(patsubst %,$(srcdir)/%, $(libgstinterfaces_@GST_MAJORMINOR@_la_SOURCES))
+gir_sources+=$(patsubst %,$(srcdir)/%, $(nodist_libgstinterfaces_@GST_MAJORMINOR@_la_SOURCES))
 gir_cincludes=$(patsubst %,--c-include='gst/interfaces/%',$(libgstinterfacesinclude_HEADERS))
 gir_cincludes+=$(patsubst %,--c-include='gst/interfaces/%',$(nodist_libgstinterfacesinclude_HEADERS))
 
