introspection: Fix out-of-tree build

--- a/gstreamer/libs/gst/check/Makefile.am
+++ b/gstreamer/libs/gst/check/Makefile.am
@@ -113,7 +113,7 @@ GstCheck-@GST_MAJORMINOR@.gir: $(INTROSPECTION_SCANNER) libgstcheck-@GST_MAJORMI
 		--nsversion=@GST_MAJORMINOR@ \
 		-I$(top_srcdir) \
 		$(gir_cincludes) \
-		--add-include-path=$(top_srcdir)/gst \
+		--add-include-path=$(top_builddir)/gst \
 		--library=gstcheck-0.10 \
 		--include=Gst-0.10 \
 		--libtool="$(top_builddir)/libtool" \
