--- a/gstreamer/libs/gst/controller/Makefile.am
+++ b/gstreamer/libs/gst/controller/Makefile.am
@@ -44,7 +44,7 @@ GstController-@GST_MAJORMINOR@.gir: $(INTROSPECTION_SCANNER) libgstcontroller-@G
 		--nsversion=@GST_MAJORMINOR@ \
 		-I$(top_srcdir) \
 		$(gir_cincludes) \
-		--add-include-path=$(top_srcdir)/gst \
+		--add-include-path=$(top_builddir)/gst \
 		--library=gstcontroller-0.10 \
 		--include=Gst-0.10 \
 		--libtool="$(top_builddir)/libtool" \
