--- a/gstreamer/libs/gst/dataprotocol/Makefile.am
+++ b/gstreamer/libs/gst/dataprotocol/Makefile.am
@@ -34,7 +34,7 @@ GstDataprotocol-@GST_MAJORMINOR@.gir: $(INTROSPECTION_SCANNER) libgstdataprotoco
 		--nsversion=@GST_MAJORMINOR@ \
 		-I$(top_srcdir) \
 		$(gir_cincludes) \
-		--add-include-path=$(top_srcdir)/gst \
+		--add-include-path=$(top_builddir)/gst \
 		--library=gstdataprotocol-0.10 \
 		--include=Gst-0.10 \
 		--libtool="$(top_builddir)/libtool" \
