--- a/gstreamer/libs/gst/net/Makefile.am
+++ b/gstreamer/libs/gst/net/Makefile.am
@@ -35,7 +35,7 @@ GstNet-@GST_MAJORMINOR@.gir: $(INTROSPECTION_SCANNER) libgstnet-@GST_MAJORMINOR@
 		--nsversion=@GST_MAJORMINOR@ \
 		-I$(top_srcdir) \
 		$(gir_cincludes) \
-		--add-include-path=$(top_srcdir)/gst \
+		--add-include-path=$(top_builddir)/gst \
 		--library=gstnet-0.10 \
 		--include=Gst-0.10 \
 		--libtool="$(top_builddir)/libtool" \
