--- a/gstreamer/libs/gst/base/Makefile.am
+++ b/gstreamer/libs/gst/base/Makefile.am
@@ -52,7 +52,7 @@ GstBase-@GST_MAJORMINOR@.gir: $(INTROSPECTION_SCANNER) libgstbase-@GST_MAJORMINO
 		--nsversion=@GST_MAJORMINOR@ \
 		-I$(top_srcdir) \
 		$(gir_cincludes) \
-		--add-include-path=$(top_srcdir)/gst \
+		--add-include-path=$(top_builddir)/gst \
 		--library=gstbase-0.10 \
 		--include=Gst-0.10 \
 		--libtool="$(top_builddir)/libtool" \
